--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,5 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788664.md#1" target="_blank">东方觉：年终奖竟是“免裁券” “花式裁员”伤人心</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788664.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/903151931542054-600x400-1-150x120.jpg" align ="left"></a>已至年末，许多员工盼望能领到一份年终奖金，回家团圆，过个平安年。可是希望越大，失望越大，现在年终奖不仅越来越“缩水”，而且变得越来越“奇葩”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 8:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank">王赫：习近平可识“桃花源中人”？</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>1月8日，中共召开“不忘初心、牢记使命”主题教育总结大会，习近平在讲话中向全党喊话：与时俱进，不能做“不知有汉，无论魏晋”的桃花源中人。习近平这里引用“桃花源中人”一词，完全是对这个词的错解、误用。当然，这也不能全怪习近平，因为这个词在中共党史中有特定的含义，毛、邓都用过，习也是照搬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788200.md#1" target="_blank">张林：从波斯帝国到让全世界嘲笑的当代伊朗</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C3-1-600x400-1-1-1-150x120.jpg" align ="left"></a>伊朗将军苏里曼尼是联合国通辑的恐怖分子，美国将其斩首之后，伊朗统治集团既绝望又恐惧，演出了一幕幕丑剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 5:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11787934.md#1" target="_blank">李靖宇：台湾大选 中共成蔡英文“最大助选员”</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11787934.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49fb45959fb1153b0c445be73d68033d-150x120.jpg" align ="left"></a>事实上，民进党大胜、国民党惨败的主要原因即是台湾大选背后的“中共因素”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 9:18 PM			</td></tr>
@@ -27,9 +26,6 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank">任世豪：中共法律丑闻又一桩</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11784637.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-8-mh-persecution-arrest-2019-3-600x400-1-150x120.png" align ="left"></a>在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，一再制造冤假错案......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank">袁斌：没人信的藏民安全满意度与江苏脱贫率</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/309034826938-150x120.jpg" align ="left"></a>最近大陆党媒报导的两个数字很吸引眼球，引发了媒体的关注和网民的热议——一个是西藏民众安全满意度达99.7％，另一个是江苏省脱贫率超过99.99%。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783651.md#1" target="_blank">【名家专栏】川普的全国讲话恰如其分</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1192550658-webcrop-1200x720-150x120.jpg" align ="left"></a>美国总统唐纳德?川普（特朗普）总统针对伊朗的报复性打击向全国发表的讲话包含了强硬、严肃、同情和希望，以及它们之间的完美平衡。尽管如此，国会中的民主党人还是立即批评了总统的决定和随后的评论。他们这样做并不是因为总统做了什么不恰当的事情，而是因为，再一次令他们感到沮丧的是，总统的决定是正确的，该决定对整个国家来讲是最好的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 12:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11788867.md#1" target="_blank">陆客：致习近平的一封信</a><br></h3>习近平先生：
-
- 您好。我是一位中国公民，请允许我以平等的身份与您进行一些交流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788618.md#1" target="_blank">吐为快：贺中华民国之民主光大</a><br></h3>阋墙御侮抗匪渗，忭舞自由致尧舜；
 海内属望树矜式，陆民深热羡荣尊；
 安黎衽席非一隅，光复禹域是重任；
@@ -63,5 +59,26 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785398.md#1" target="_blank">项云：老百姓看“打黑除恶”</a><br></h3>不管中共宣扬和实施“打黑除恶”什么意义，老百姓却完全不看好。听了三个百姓对“打黑除恶”看法，有的挺新颖。整理了一下他们看法叙述如下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785344.md#1" target="_blank">文静：“舆情引导”员把自己引向了险境</a><br></h3>共产党就是用各种手段维护他的统治，而它的这些手段都是把好人变成坏人。而坏人是没正义、没气节的，只要许以利益或恐吓，什么事都会去干，这样的人最便于中共的统治。希望你们每个人不要被它引诱成为坏人，帮其行恶，最后也成了罪人，把自己引向了危险的境地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783854.md#1" target="_blank">王赫：中共政局——三病缠身 死前丧智</a><br></h3>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化：草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 11:01 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783874.md#1" target="_blank">海网：“空心朽”演“核心秀”</a><br></h3>喊罢政治局看齐，
+再查常委会足迹。
+一尊惟一尊呼吁，
+核心被空心疏离。
+中国共产党亡石①，
+伴有古枫演哑剧②。
+哑剧今上中南海，
+红朝就剩一张皮。
+三退已近三亿半，
+未退好人莫再迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783719.md#1" target="_blank">陈达：天灭中共还剩几步棋？</a><br></h3>正邪大战激，地球村分离。大陆红山寨，美国世警局。
+
+世警每集结，往往遭伏击。萨达姆捣乱，拉登飞机袭。
+
+卡扎菲扯腿，塔利班猫腻。伊斯兰建国，伊朗朝核器。
+
+大战临末尾，天帚扫垃圾。川普新警长，干扰排而避。
+
+对手定中共，布阵亚太区。伊斯兰国灭，巴格达迪毙。
+
+揪住金三耳，中朝双簧息。阻伊朗挑衅，炸苏.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iaoxos223/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iaoxos223/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
