--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,12 +2,12 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801522.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/09/1903161216022190-320x200.jpg">“一带一路”企业再爆雷 半年违约60亿</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788541.md#1">中共官员变换护照身份 逃避人权法案制裁</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801869.md#1">吴惠林：导读 从历史学习，“天堂”操之在己</a><br>
@@ -30,7 +30,8 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802724.md#1">业绩预告频爆雷 数家公司共亏损70亿</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802498.md#1">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802724.md#1">业绩预告频爆雷 大陆数家公司共亏损70亿</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802036.md#1">【翻墙必看】接班人问题是中共权力更替的死穴</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802037.md#1">中共监控学校 数千学生人脸识别数据遭泄漏</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802382.md#1">王友群：林郑月娥可知你“错”在哪？</a><br>
@@ -41,8 +42,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800810.md#1">台湾大选反共潮高涨 鼓舞中港人民争自由</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801695.md#1">大陆明星饮品下架 天喔国际停牌16个月</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802498.md#1">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802364.md#1">大陆收费公路欠债达5.7万亿</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801989.md#1">江西现史上罕见夏秋冬连旱 552万人受灾</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801925.md#1">拥抱台湾 捷克海盗党欲扭转总统亲共政策</a><br>
@@ -50,6 +49,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1">【武汉肺炎疫情 | 持续更新】出现第2例死亡 日本泰国都现病例 疫情疑遭隐瞒</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801405.md#1">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801540.md#1">制片人爆大陆限薪令：头部演员片酬降九成</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801695.md#1">大陆明星饮品下架 天喔国际停牌16个月</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801609.md#1">高校将推“强基计划” 学者：维持中共统治</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801575.md#1">中美协议对照美方首次要价 五大差异在这里</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801598.md#1">贸易协议签署后 官媒热炒空姐炫富开车游故宫</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,052,656 人
+- 共 350,058,447 人
 ```
 </strong>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
