--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,6 +10,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801869.md#1">吴惠林：导读 从历史学习，“天堂”操之在己</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801852.md#1">骆克仁:《协议》签订后的“小道消息”</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801506.md#1">颜丹：中国人何时不再当中共的人质？</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799285.md#1">乾元：重庆频频大火带给我们的启示</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798996.md#1">【名家专栏】工资与战争：中俄军费被低估</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798907.md#1">王赫：2019中共政局 赶制家法 内斗诡异</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798679.md#1">王友群：2020中国会不会传染病大爆发</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802910.md#1">贵州化工厂燃爆 天空被映红 居民急撤离</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802498.md#1">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802724.md#1">业绩预告频爆雷 大陆数家公司共亏损70亿</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802040.md#1">袁斌：中美贸易战，中共认怂的谜底在这里</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802063.md#1">【拍案惊奇】救吴花燕钱无踪 港警贴连侬被捕</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801973.md#1">开豪车入故宫惹议 “露小宝”自称是红三代</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802969.md#1">欧盟前外交官涉为中共国安部进行间谍活动</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802364.md#1">大陆收费公路欠债达5.7万亿</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801989.md#1">江西现史上罕见夏秋冬连旱 552万人受灾</a><br>
