--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,10 +4,10 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788541.md#1">中共官员变换护照身份 逃避人权法案制裁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11786132.md#1">台湾大选蔡英文大胜 中共散播假新闻失败</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/11/4/n11631494.md#1">【思想领袖】金里奇：美国曾误判中共这个最大威胁</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,077,268 人
+- 共 350,079,529 人
 ```
 </strong>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
