--- a/gb/ncid280_2.md
+++ b/gb/ncid280_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772774.md#1" target="_blank">疑遭导师压榨 南邮研究生自焚亡 消息被封</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-150x120.gif" align ="left"></a>南京邮电大学一名研究生疑不堪导师的压榨在实验室自焚身亡。事后学校和政府严密封锁消息，直到死者母亲在学校哀嚎才揭开黑幕。该话题曾冲上微博热搜，引发广泛关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772040.md#1" target="_blank">武汉肺炎病人过去一周医药费高达4.3万</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>湖北武汉爆发不明原因肺炎疫情，患者治疗费用奇高，一名病人过去一周医药费及住院费高达4.3万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank">受降雪影响 大陆131条高速135个路段封闭</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，因降雪影响，大陆131条高速135个路段封闭，波及北京、天津、河北、山西、陕西、内蒙古。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank">武汉不明肺炎延烧 泰国菲律宾加强检测旅客</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>武汉不明肺炎疫情持续扩散，为此亚洲各国均采取因应措施。泰国疾病管制局和泰国机场公司合作在机场加装红外线温度扫描机，并加强对来自中国武汉的旅客检查措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11791555.md#1" target="_blank">大雾黄色预警 河北等地42条高速路封闭</a><br></h3>中央气象台1月14日6时继续发布大雾黄色预警：预计14日上午，河北南部、河南北部和南部、山东西部、江苏南部、湖北北部等地的部分地区有大雾，其中，河北南部、湖北北部等地的部分地区有强浓雾，能见度不足200米，局地能见度不足50米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790085.md#1" target="_blank">重庆一小区再现坠楼者砸死人 致2死</a><br></h3>继去年底，重庆沙坪坝区一男子坠亡砸死2人后，今天（1月13日）上午，重庆市美德佳园小区再现一名坠楼者砸死一个路人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781769.md#1" target="_blank">广东一商铺着火 2儿童烧死 3大人逃生</a><br></h3>1月9日凌晨，广东省梅州市兴宁市水口镇一家商铺发生火灾。一家5口被困火场，3名成人顺利逃出，2名儿童则遇难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 4:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/9/n11778710.md#1" target="_blank">安徽长丰县重型货车和私家车相撞 致8死</a><br></h3>1月8日下午，安徽省长丰县发生交通事故，导致8人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:48 PM							</td></tr>
