--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank">工作繁忙脑袋卡关 2诀窍保持高超工作效率</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/120718151848100445-320x200.jpg" align ="left"></a>活用“以两成付出，创造八成价值”的帕累托法则（Pareto principle）。只要仔细观察，将发现两成时间创造八成价值的情形，其实相当之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:56 AM	</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank">日本特色书店（2）位在都心的完美空间</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7bb2d0c9ab7783a8335b21ef825b1b37-150x120.jpg" align ="left"></a>TSUTAYA BOOK APARTMENT由创立“茑屋书店”的ＣＣＣ集团（Culture Convenience Club）的TSUTAYA开设的新式设施，就位在新宿站旁边，是一个24小时营业的“放松空间”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801927.md#1" target="_blank">【梁厨美食】黑豆雪耳帆立贝炖汤</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11801927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8-4-150x120.jpg" align ="left"></a>在这样冷冷的天气，来一碗有干贝的海水咸淡味，再搭配上蜜枣、核桃、黑豆的浓郁香甜，炖锅就在小火中慢慢释放出食材的精华，同时雪耳加助浓稠的质地，这样可口的炖汤岂有不能拢络家人那挑嘴的胃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【武汉肺炎疫情 | 持续更新】出现第2例死亡 日本泰国都现病例</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-novel-coronavirus-timeline2-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:18 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【武汉肺炎 | 持续更新】英权威机构推测：实际感染者恐逾1700人</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193183155-1-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank">辩证疗法快速减鼾治鼾</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6994f0d239cfac976c71974d7c4d3163-150x120.jpg" align ="left"></a> 临床上根据疾病的主要表现和特征，来诊断疾病的过程则称为“辨病”。“病”和“证”的确定，都是以症状为依据的。一病可以出现多证，一证可见于多病之中。因此，临床上必须把“辩证”与“辨病”相结合，这样诊断就会准确。 中医历代医家的辩证医学，是通过长期临床实践，逐渐发展而成，辩证领域很广，举例来说，有：“病因”辩证、“气血津液.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801134.md#1" target="_blank">品味Chingunae特色烤猪排</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1aefe21676a6812ad365d3c7edf0e9e6-150x120.jpg" align ="left"></a>来Chingunae餐厅吃饭，不仅可以享受美味可口的菜肴，安适、友善而温暖的氛围，更让人有一种置身于韩国的感觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800191.md#1" target="_blank">林黛玉一年只能睡好10天？贫血易致缺氧和失眠</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/sleep-anemia_1013703874-150x120.jpg" align ="left"></a>林黛玉可能有贫血导致的缺氧型失眠的问题。会讨论到林黛玉是否有缺氧型失眠问题的话题，是来自于一位自称“林黛玉”的读者。这位“现代林黛玉”小姐，从小又体弱多病、气血不足，所以也就有了林黛玉的绰号。而这“现代林黛玉”有经常失眠问题，不管是中医或西医治疗都没有长期的效果。能否顺利进入睡眠，其实取决于身体的血氧获取程度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:58 AM			</td></tr>
