--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -40,6 +40,15 @@
 
 这场选举到底有没有“受到外部力量的操控”，我们不妨先来听听蔡英文获选.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 3:28 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791025.md#1" target="_blank">王友群：蔡英文胜选获国际赞赏的五个原因</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NM6GV-1-600x400-1-150x120.jpg" align ="left"></a>1月11日，蔡英文以台湾直选总统史上最高票数成功连任，美国等70多个国家、国际组织的政要纷纷表示热烈祝贺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 2:56 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11797512.md#1" target="_blank">吐为快：让领导先走</a><br></h3>党国栋梁宿，恐怖诸领袖
+身娇命更优，心毒脸特厚
+先天下之乐，后天下之忧
+包星倾城秀，贪财第一流
+残民酷无比，破坏强中手
+活摘手不抖，乱港狠不羞
+皇天岂无眼，忍让魔优游
+川普截世流，规则勇改涂
+反恐黄泉路，让领导先走......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 3:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/15/n11796267.md#1" target="_blank">夏林：中共新年挨的两记重拳</a><br></h3>中共从2019年起，明显走霉运。而2020年刚到，中共又意外地被重击两拳。左钩拳是美国政府斩首伊朗二号恐怖分子苏莱曼尼；右钩拳是台湾大选，对中共强硬的蔡英文大胜。
 
 去年12月30日发生了有伊朗恐怖分子苏莱曼尼参与策动的包围美国驻伊拉克使馆事件。美国政府迅速平息这一事件之后，目标锁定了在后面参与的伊朗重要人物苏莱曼.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:06 AM			</td></tr>
@@ -57,6 +66,5 @@
 虎啸庙堂荒，鹅飞妖共哀......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791371.md#1" target="_blank">【读者投书】中共对穆斯林的迫害成扩大趋势</a><br></h3>在经历新疆2009年“乌鲁木齐七五事件”后，中共开始对新疆穆斯林实行长达10年的高压政治迫害政策。对新疆各少数族大批量的无辜善良的穆斯林信徒进行大规模迫害，实行宁枉勿纵的政策——宁可冤枉，也不放过。近几年对穆斯林的迫害更是到了疯狂的地步，已经从新疆地区迅速扩开到全国，对全国所有信仰伊斯兰教的民族进行迫害。迫害人数扩大化.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 6:23 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791226.md#1" target="_blank">超薄微热管：可携式电子产品散热应用</a><br></h3>小型化和高密度封装电子产品，需要紧凑且具高效散热部件。扁平超薄微热管非常适合高功率和有限空间散热，目前已经广泛研究并应用在可携式电子产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11790392.md#1" target="_blank">中立：中共与民为敌 期望台湾民主统一大陆</a><br></h3>中共以一党极权独裁，拒绝民主，拒绝民意，实乃以人民为敌，以民主自由为敌。北京当局图谋以巩固和加强中共长存的的动机为最终目的，就是巩固中共一党长期极权独裁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iaoxos223/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iaoxos223/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
