--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803305.md#1">武汉新增17例肺炎 2危重 传播途径仍未知</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803161.md#1">开豪车游故宫 红三代耍特权惹众怒</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802960.md#1">房还在地址被消失 上海一新生儿无法报户口</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802910.md#1">贵州化工厂燃爆 天空被映红 居民急撤离</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802417.md#1">武汉新增4起新型肺炎病例 全数转院隔离</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11801450.md#1">【新闻看点】6因素 北京接受川普惩罚性关税</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802040.md#1">袁斌：中美贸易战，中共认怂的谜底在这里</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802063.md#1">【拍案惊奇】救吴花燕钱无踪 港警贴连侬被捕</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803135.md#1">德国华为分歧持续 默克尔坚持不排除</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803065.md#1">帮助26名中国人偷渡美国 3人被起诉</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803040.md#1">武汉肺炎 首批武汉直飞乘客在纽约落地受检</a><br>
