--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11786132.md#1">台湾大选蔡英文大胜 中共散播假新闻失败</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802277.md#1">阅明：香港真相揭画皮 三退大潮顺天意</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799892.md#1">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799705.md#1">程晓农：美中经贸谈判的“临门一脚”与外国解读</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
