--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,14 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800815.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5717-600x400-2-1-320x200.jpg">分析：台湾大选带给中共哪些打击</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/15/n11796241.md#1">伊朗在变天 中共或失去打击美国的王牌</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793300.md#1">【新闻看点】中美初阶段贸协曝光 北京大让步</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/12/n11788541.md#1">中共官员变换护照身份 逃避人权法案制裁</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/11/n11786132.md#1">台湾大选蔡英文大胜 中共散播假新闻失败</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803302.md#1">周晓辉：习近平未去美国签约背后隐藏的危机</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803257.md#1">颜丹：中国“人均GDP过万”为何毫无意义？</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11803290.md#1">大成漫画：开口吓傻邪党官</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/18/n11802918.md#1">张林：中共魔手把慈善机构变成诈骗团伙</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799968.md#1">俞晓薇：韩国和大陆法轮功学员境遇两重天</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800085.md#1">陆言：共产党离灭亡的终点还有多远？</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793721.md#1">传记《穿透阴霾的舞蹈》读后感</a><br>
-<a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799892.md#1">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br>
 <br><p><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,082,926 人
+- 共 350,072,283 人
 ```
 </strong>
 <a href="https://github.com/iaoxos223/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
