--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/8/n11775908.md#1" target="_blank">天津权健董事长束昱辉获刑9年 罚款五千万</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/8/n11775908.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG111183534895-600x400-2-150x120.jpg" align ="left"></a>今天（8日），天津权健自然医学科技发展有限公司（下称权健公司）董事长束昱辉等12人组织、领导传销活动一案公开宣判。其中束昱辉被判处有期徒刑9年，罚款五千万元人民币（下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/8/n11775949.md#1" target="_blank">伊朗15枚导弹袭美军基地 川普冷静回应</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/8/n11775949.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LS2S7-150x120.jpg" align ="left"></a>当地时间周三凌晨，伊朗向伊拉克美军基地发射多枚导弹，美国总统川普（特朗普）美东时间晚发推说，目前美方正在评估人员伤亡和损失，周三早上将对伊朗袭击发表声明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 10:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/7/n11775427.md#1" target="_blank">加州保安挺港 遭小粉红疯狂“国骂”并殴打</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/7/n11775427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/IMG_0327-150x120.jpg" align ="left"></a>近日在加州华人聚居的罗兰岗（Rowland Heights），一名商场保安与华裔青年发生纠纷，双方发生激烈争执，最后出动警方调停。双方冲突源于两个月前，这名保安张贴支持“香港”民主运动的海报与发放传单，而华裔青年则高喊：“我爱共产党”，并用国骂“X你妈”破口大骂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/7/n11775337.md#1" target="_blank">弹劾程序 参院共和党免作证提案获过半支持</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/7/n11775337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198107629-150x120.jpg" align ="left"></a>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周二（1月7日）宣布，已获得足够票数通过一项决议，启动对总统川普（特朗普）的弹劾审讯、而无需证人作证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781995.md#1" target="_blank">400公里1312元 大陆高速收天价过路费</a><br></h3>1月2日，大陆客车司机胡某开车从山西高速路驶过，但被梁山县收费站收取1312元过路费。事后，他在网络上曝光此事，山西交通控股集团有限公司才退还多收的1100元通行费。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781586.md#1" target="_blank">操场埋尸案二审维持原判 杜少平仍判死刑</a><br></h3>1月10日，湖南新晃县一中操场埋尸案进行二审，驳回被告人杜少平等人的上诉，杜少平依旧被判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781369.md#1" target="_blank">3岁大陆男童到港暂住亲友家 昏迷送院不治</a><br></h3>今日（10日）凌晨约1时半，一名大陆3岁男童在香港九龙湾住家内，被发现昏迷不醒，随送联合医院抢救，经抢救一小时后不治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 12:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781156.md#1" target="_blank">一晚做8套试题 湖南小学生出现精神异常</a><br></h3>“冲啊……来吃鸡啊!”湖南一小学生早上起来突然开始胡言乱语，送医院检查后，医生确诊为自身免疫性脑炎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 10:36 AM							</td></tr>
